apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
        policy-type: "app"
    spec:
      # securityContext:
      #   runAsUser: 33
      #   runAsGroup: 33
      #   fsGroup: 33

      containers:
        - name: linkding
          image: sissbruecker/linkding:1.38.1

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 3003
              protocol: TCP

      restartPolicy: Always

      volumeMounts:
        - name: linkding-data
          mountPath: /etc/linkding/data

      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
