apps/base/linkding/networking.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: linkding
  namespace: linkding
spec:
  ports:
    - port: 3003
  selector:
    app: linkding
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: linkding
  namespace: linkding
spec:
  ingressClassName: traefik
  rules:
    - host: linkding.mischavandenburg.net
      http:
        paths:
          - backend:
              service:
                name: linkding
                port:
                  number: 3003
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - linkding.mischavandenburg.net
      secretName: linkding-ingress-staging
